[package]
name = "alloy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Event",
    "EventTarget",
    "Document",
    "HtmlCanvasElement",
    "console",
    "KeyboardEvent",
    "MouseEvent",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlVertexArrayObject",
    "WheelEvent",
    "Window",
]
